# indexvec

./: Cargo.toml  README.md
src/: idx.rs  idx_vec.rs  lib.rs  tests.rs
