[package]
name = "indexvec"
description = "Simplified copy of rustc's index crate"
version = "0.5.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/andyyu2004/indexvec"

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[dev-dependencies]
serde_json = "1"
serde = "1"

